<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_blink</name>
  <version>0.1.0</version>
  <description>ROS2 control hardware interface for Arduino LED control</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>

  <!-- Serial communication dependency -->
  <depend>serial</depend>

  <!-- ROS2 control dependencies -->
  <depend>controller_interface</depend>
  
  <!-- Export the hardware interface plugin -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros2_control plugin="${prefix}/arduino_hardware.xml" />
  </export>
</package>